maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: value unary_! is not a member of Int
    while(!(isDirectionFree(Direction.NORTH))&&(!cmpt==0)) {
                                                ^